@@ -2,6 +2,8 @@ Changes between 1.2.1 and 1.2.0
 =====================================
 
 - fix issue63: assume <40 columns to be a bogus terminal width, default to 80
+- update apipkg.py to fix an issue where recursive imports might
+  unnecessarily break importing 
 - fix plugin links 
 
 Changes between 1.2 and 1.1.1
